# MedAlign

./: .gitignore  README.md  test.json
backend/: .gitignore  pyproject.toml  requirements.txt  test_eval.py
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py
backend/app/api/v1/: datasets.py  deps.py  evaluations.py  health.py  models.py  router.py  train.py  upload.py
backend/app/config/: settings.py
backend/app/modules/: __init__.py  eval_engine.py  pipeline.py  workflow.py
backend/app/modules/evaluation/: __init__.py  base.py  consensus_judge.py  judge.py  prompts.py
backend/app/prompts/: evaluation.py
backend/app/schemas/: __init__.py  common.py  evaluation.py  judge.py  training.py
backend/app/services/: __init__.py
backend/app/services/inference/: __init__.py  base.py  transformers_service.py
backend/app/services/llm/: __init__.py  base.py  ollama_client.py
backend/app/services/storage/: __init__.py  base.py
backend/app/utils/: __init__.py  exceptions.py  io.py  logging.py  response.py  schema.py  text.py
backend/tests/: __init__.py  test_api.py  test_pipeline_e2e.py  test_smoke.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: EvalPanel.tsx  PipelineNavigation.tsx
notebook/: 03_benchmark_engine.ipynb  04_preference_generation.ipynb  05_dpo.ipynb  06_benchmark.ipynb  benchmark_report.json  dataset.ipynb  evaluation_dataset.json  investigation_reports.json  preference_dataset.json  preference_dataset.jsonl  sft_with_qlora.ipynb
notebook/dpo_outputs/: README.md
notebook/dpo_outputs/checkpoint-1/: scheduler.pt  trainer_state.json
notebook/dpo_outputs/checkpoint-2/: scheduler.pt  trainer_state.json
notebook/dpo_outputs/checkpoint-3/: scheduler.pt  trainer_state.json
notebook/qwen_dpo/: README.md  adapter_config.json
