[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medalign"
version = "0.1.0"
description = "Open-Source Medical AI Evaluation & Post-Training Platform"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "MedAlign Team" },
]
keywords = [
    "medical-ai",
    "llm-evaluation",
    "dpo",
    "preference-learning",
    "benchmarking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
ml = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.18",
    "peft>=0.10",
    "trl>=0.8",
    "bitsandbytes>=0.43",
    "accelerate>=0.28",
]
inference = [
    "groq>=0.5",
    "ollama>=0.2",
]
analysis = [
    "numpy>=1.24",
    "pandas>=2.0",
]
all = [
    "medalign[api,ml,inference,analysis]",
]
dev = [
    "medalign[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.urls]
Homepage = "https://github.com/medalign/medalign"
Documentation = "https://medalign.readthedocs.io"
Repository = "https://github.com/medalign/medalign"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
